--- a/storage/app/.gitignore
+++ b/storage/app/.gitignore
@@ -1,4 +1,14 @@
+# Ignore tất cả file
 *
-!private/
-!public/
+
+# Ngoại lệ: giữ lại file .gitignore
 !.gitignore
+
+# Cho phép Git theo dõi folder ảnh
+!storage/
+!storage/app/
+!storage/app/public/
+!storage/app/public/images/
+!storage/app/public/images/**
+!storage/app/public/brands/
+!storage/app/public/brands/**
