--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "algolia/algoliasearch-client-php": "^4.21",
         "doctrine/dbal": "^4.2",
-        "elasticsearch/elasticsearch": "*",
+        "elasticsearch/elasticsearch": "^9.0",
         "laravel/framework": "^12.0",
+        "laravel/scout": "^10.15",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-permission": "^6.16"
     },
